# sharkplayer-old

./: .prettierrc  README.md  package-lock.json  package.json
src/: home.html  index.html  login.html  main.js  media.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
