[package]
name = "sharkplayer"
version = "0.1.0"
description = "A music player!"
authors = [
    "Kat <kat@kattschan.co.uk>",
    "Ryan <sheepy@sheepy.moe>",
    "chinh4thepro <chinh4thepro@gmail.com>",
]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde = { version = "1.0.196", features = ["derive"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
